--- a/.gitignore
+++ b/.gitignore
@@ -59,7 +59,10 @@ BOOK
 _freeze
 haufigkeiten_files
 regression-korrelation_files
-stichprobenkennwerte_files
+stichprobenstatistik_files
+kontiuierlich_files
+diskret_files
+wahrscheinlichkeit_files
 intro_files
 credits_files
 figure/
