--- a/.gitignore
+++ b/.gitignore
@@ -60,7 +60,7 @@ _freeze
 haufigkeiten_files
 regression-korrelation_files
 stichprobenstatistik_files
-kontiuierlich_files
+kontinuierlich_files
 diskret_files
 wahrscheinlichkeit_files
 intro_files
