grafiken angepasst für latex

--- a/_extensions/produnis/buechlein/_extension.yml
+++ b/_extensions/produnis/buechlein/_extension.yml
@@ -22,7 +22,7 @@ contributes:
       bookmarks: true
       plainpages: false
       hypertexnames: true
-      fig-width: 4
+      #fig-width: 4
       fig-align: center
       fig-pos: "H"
       toc: false # alles auf false, damit die Seitennummerierung roman/arabic passt
